--- a/my-next-app/tsconfig.json
+++ b/my-next-app/tsconfig.json
@@ -15,7 +15,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": ["node"]
   },
   "include": [
     "next-env.d.ts",
