--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -23,6 +24,7 @@
     "@types/react": "^18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "prisma": "^5.16.1",
     "typescript": "^5.5.3"
   }
 }
