--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "@types/react-dom": "^18.3.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
