--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1"
@@ -22,7 +23,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.10",
+    "@types/next": "^9.0.0",
+    "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
