--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.16.1",
     "@types/react-dom": "^18.3.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.5",
@@ -22,10 +23,12 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/next": "^9.0.0",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5.5.3"
